# telegram-epson-printer-bot

./: .dockerignore  Dockerfile  README.md  pyproject.toml  start.sh.example
.github/workflows/: docker-image.yml
telegram_epson_printer_bot/: __main__.py
telegram_epson_printer_bot/lang/: de.json  en.json  it.json
